<resources>
  <!-- Name for the application [CHAR LIMIT=12] -->
  <string name="app_name">Book Store 2</string>

  <!-- MAIN ACTIVITY -->

  <!-- Title text for the empty view [CHAR LIMIT=50] -->
  <string name="empty_view_text">The Book Store is empty. Add a Book!</string>

  <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
  <string name="action_delete_all_products">Delete All Books</string>

  <string name="delete_all_dialog_msg">Are you sure you want to delete ALL Books ?</string>
  <string name="deleted_all_books">books deleted from table</string>

  <!-- EDITOR ACTIVITY -->

  <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
  <string name="add_book">Add Book</string>

  <!-- Title for the activity to edit an existing book [CHAR LIMIT=20] -->
  <string name="edit_book">Edit Book</string>

  <!--  Supplier Name List -->
  <string name="supplier_unknown">Unknown</string>      <!-- 0 -->
  <string name="supplier_amazon">Amazon</string>        <!-- 1 -->
  <string name="supplier_bertrand">Bertrand</string>    <!-- 2 -->
  <string name="supplier_wook">Wook</string>            <!-- 3 -->

  <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
  <string name="discard">Discard</string>
  <string name="keep_editing">Keep Editing</string>

  <!-- BOOK ACTIVITY -->

  <!-- Title for the activity to view an existing book [CHAR LIMIT=20] -->
  <string name="book_view">Book View Details</string>

  <!-- Label for the button to delete the existing book [CHAR LIMIT=20] -->
  <string name="delete_dialog_msg">Delete this book?</string>
  <string name="quantity_change_msg">Quantity was changed</string>
  <string name="quantity_finish_msg">Book is out of stock, buy another book.</string>

  <!-- BOOK ACTIVITY & EDITOR ACTIVITY Layout -->
  <string name="book_name">Book Name</string>
  <string name="book_price">Price</string>
  <string name="book_price_currency">€</string>
  <string name="book_quantity">Quantity</string>
  <string name="book_supplier_name">Supplier Name</string>
  <string name="book_supplier_phone">Supplier Phone Number</string>

  <!-- Hint labels -->
  <string name="book_name_hint">eg: ClockWork Orange</string>
  <string name="book_price_hint">eg: 10</string>
  <string name="book_quantity_hint">eg: 99</string>
  <string name="book_supplier_phone_hint">eg: 912 345 678</string>

  <!-- Label for editor menu option to save book and leave editor [CHAR LIMIT=20] -->
  <string name="action_save">Save</string>


  <string name="insert_failed">Error saving book</string>
  <string name="insert_successful">Book saved successfully</string>

  <string name="update_failed">Error with updating book</string>
  <string name="update_successful">Book updated successfully</string>

  <string name="delete">Delete</string>
  <string name="cancel">Cancel</string>

  <string name="delete_product_successful">Book deleted</string>
  <string name="delete_product_failed">Error with deleting Book</string>

  <!-- Required Input fields Error Messages -->
  <string name="book_name_required">Book name is required</string>
  <string name="book_price_required">Book price is required</string>
  <string name="book_quantity_required">Book Quantity is required</string>
  <string name="supplier_name_required">Please select a Supplier</string>
  <string name="supplier_phone_required">Supplier Phone Number is required</string>

</resources>
