<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="16dp"
  tools:context="com.fabiotp.inventoryappv2.EditorActivity">

  <LinearLayout style="@style/ActivityEditorLinearLayoutsection1">

    <TextView
      style="@style/ProductAddTextStyle"
      android:text="@string/book_name" />

    <RelativeLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2">

      <EditText
        android:id="@+id/txt_edit_book_name"
        style="@style/ProductAddFormStyle"
        android:hint="@string/book_name_hint"
        android:inputType="textCapWords" />
    </RelativeLayout>
  </LinearLayout>

  <LinearLayout style="@style/ActivityEditorLinearLayoutsection1">


    <TextView
      style="@style/ProductAddTextStyle"
      android:text="@string/book_price" />

    <RelativeLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2">

      <EditText
        android:id="@+id/txt_edit_book_price"
        style="@style/ProductAddFormStyle"
        android:hint="@string/book_price_hint"
        android:inputType="number" />

      <TextView
        style="@style/CurrencyStyle"
        android:text="@string/book_price_currency" />
    </RelativeLayout>
  </LinearLayout>

  <LinearLayout style="@style/ActivityEditorLinearLayoutsection1">


    <TextView
      style="@style/ProductAddTextStyle"
      android:text="@string/book_quantity" />

    <RelativeLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2">

      <EditText
        android:id="@+id/txt_edit_book_quantity"
        style="@style/ProductAddFormStyle"
        android:hint="@string/book_quantity_hint"
        android:inputType="number" />
    </RelativeLayout>
  </LinearLayout>

  <LinearLayout style="@style/ActivityEditorLinearLayoutsection1">


    <TextView
      style="@style/ProductAddTextStyle"
      android:text="@string/book_supplier_name" />

    <Spinner
      android:id="@+id/txt_edit_book_supplier_name"
      android:layout_width="wrap_content"
      android:layout_height="48dp"
      android:paddingRight="16dp"
      android:spinnerMode="dropdown" />
  </LinearLayout>

  <LinearLayout style="@style/ActivityEditorLinearLayoutsection1">

    <TextView
      style="@style/ProductAddTextStyle"
      android:text="@string/book_supplier_phone" />

    <RelativeLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2">

      <EditText
        android:id="@+id/txt_edit_book_supplier_phone"
        style="@style/ProductAddFormStyle"
        android:hint="@string/book_supplier_phone_hint"
        android:inputType="number" />
    </RelativeLayout>
  </LinearLayout>

</LinearLayout>